[gd_scene load_steps=9 format=3 uid="uid://bnxdl0nip1725"]

[ext_resource type="Script" path="res://weapon/weapon.gd" id="1_d0nrl"]
[ext_resource type="Shader" path="res://weapon/outline.gdshader" id="2_l2wr5"]
[ext_resource type="Texture2D" uid="uid://vmwjoassnetb" path="res://assets/weapons/guns/PNG/GUN_01_[square_frame]_01_V1.00.png" id="3_6wxj0"]

[sub_resource type="Animation" id="Animation_nrq4n"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j8bxd"]
_data = {
"idle": SubResource("Animation_nrq4n")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_uyqge"]
graph_offset = Vector2(47, -29)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pwvmj"]
resource_local_to_scene = true
shader = ExtResource("2_l2wr5")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="CircleShape2D_unbxv"]
radius = 469.01

[node name="weapon" type="Node2D"]
script = ExtResource("1_d0nrl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j8bxd")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_uyqge")
anim_player = NodePath("../AnimationPlayer")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pwvmj")
scale = Vector2(3, 3)
texture = ExtResource("3_6wxj0")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_unbxv")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
